--- a/LMS/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/LMS/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -1,25 +1,20 @@
 ﻿<!--
-
 =========================================================
 * Now UI Dashboard - v1.5.0
 =========================================================
-
 * Product Page: https://www.creative-tim.com/product/now-ui-dashboard
 * Copyright 2019 Creative Tim (http://www.creative-tim.com)
-
 * Designed by www.invisionapp.com Coded by www.creative-tim.com
-
 =========================================================
-
 * The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
-
 -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
     <link rel="apple-touch-icon" sizes="76x76" href="../assets/img/apple-icon.png">
-    <link rel="icon" type="image/png" href="../assets/img/favicon.png">
+    @*<link rel="icon" type="image/png" href="../assets/img/favicon.png">*@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <title>
         KGS LMS Dashboard
