--- a/LMS/Areas/Admin/Views/Teacher/AddTeacher.cshtml
+++ b/LMS/Areas/Admin/Views/Teacher/AddTeacher.cshtml
@@ -191,7 +191,12 @@
                                                             <input asp-for="Teacher_MobNumber" type="text" class="form-control" placeholder="Mobile Number">
                                                         </div>
                                                     </div>
-
+                                                    <div class="col-md-4 px-1">
+                                                        <div class="form-group">
+                                                            <label>Password</label>
+                                                            <input asp-for="Teacher_Password" type="text" class="form-control" placeholder="Password">
+                                                        </div>
+                                                    </div>
                                                 </div>
 
                                                 <div class="row">
